--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 robotframework==7.2.2
+robotframework-requests==0.9.7
 robotframework-seleniumlibrary==6.7.1
 robotframework-pabot==4.2.0
-python-dotenv-1.1.0
+python-dotenv==1.1.0
